--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,11 @@
-.App {
-  text-align: center;
+h1 {
+  color: rgb(18, 201, 192);
 }
 
-.App-logo {
-  height: 40vmin;
+h3 {
+  font-style: italic;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+#itemList {
+  padding: 0;
 }
